------------------------ 3.7.207 Release [12-May-2020] ------------------------

12-May-2020
  # Ajax (build 207)

------------------------ 3.7.206 Release [11-May-2020] ------------------------

11-May-2020
  # Class 'eshiol\J2xml\Exporter' not found (build 206)

----------------------- 3.7.205 Release [17-April-2020] -----------------------

17-April-2020
  + overwrite article if newer (205)

----------------------- 3.7.204 Release  [6-April-2020] -----------------------

6-April-2020
  # PHP 5.3 compatibility (build 204)

--------------------- 3.7.203 Release  [12-February-2020] ---------------------

12-February-2020
  # PHP 7.2 compatibility (build 203)

--------------------- 3.7.202 Release  [20-December-2019] ---------------------

20-December-2019
  # send (build 202)

--------------------- 3.7.201 Release [16-September-2019] ---------------------

16-September-2019
  # keep user id (build 201)

----------------------- 3.7.200 Release  [23-July-2019] -----------------------

23-July-2019
  # 1305 FUNCTION usergroups_getpath does not exist (build 200)

------------------------ 3.7.199 Release [8-July-2019] ------------------------

8-July-2019
  # featured (build 199)
  # rating (build 199)

------------------------ 3.7.198 Release [20-May-2019] ------------------------

5-June-2019
  # 3rd party plugin (build 198)

20-May-2019
  # Import weblinks (build 197)

----------------------- 3.7.196 Release [15-April-2019] -----------------------

15-April-2019
  # Uncaught ReferenceError: Joomla is not defined (build 196)

12-April-2019
  # version check (build 195)
  # sender LIB_J2XML_MSG_USER_SKIPPED (build 195)

----------------------- 3.7.194 Release  [1-March-2019] -----------------------

1-March-2019
  # xmlrpc gzip (build 194)

20-February-2019
  + J2XML Pro (build 193)

13-February-2019
  + view levels (build 192)
  - backlink (build 192)
  - clean (build 192)

--------------------- 3.7.191 Release  [11-February-2019] ---------------------
