@@ -7,7 +7,7 @@
   <authorUrl>www.eshiol.it</authorUrl>
   <copyright><![CDATA[(C) 2010 - 2020 Helios Ciancio <info (at) eshiol (dot) it> (https://www.eshiol.it). All Rights Reserved.]]></copyright>
   <license>GNU/GPL v3</license>
-  <version>3.7.207</version>
+  <version>3.7.208</version>
   <description>COM_J2XML_XML_DESCRIPTION</description>
   <scriptfile>script.php</scriptfile>
   <install>
